# pyama-v2

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  package.json  pyproject.toml  turbo.json
apps/pyama/: index.html  package.json  tsconfig.json  vite.config.ts
apps/pyama/src/: App.tsx  app.tsx  fonts.css  main.tsx  routeTree.gen.ts
apps/pyama/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/pyama/src-tauri/capabilities/: default.json
apps/pyama/src-tauri/permissions/: app.toml
apps/pyama/src-tauri/src/: backend.rs  cli_launch.rs  domain.rs  host_fs.rs  image.rs  lib.rs  main.rs  roi.rs
apps/pyama/src-tauri/src/data/: tiff.rs
apps/pyama/src-tauri/src/viewer/: backend.rs  domain.rs  image.rs  mod.rs  profiler.rs  roi.rs
apps/pyama/src/components/: AutoExclude.ts  AutoExcludeDialog.tsx  CanvasSurface.tsx  Controls.tsx  FrameNavigation.tsx  GridSidebar.tsx  HostFilePickerDialog.tsx  IntensitySidebar.tsx  Navbar.tsx  NavigationControls.tsx  ServerConnectionButton.tsx  Workspace.tsx  auto-exclude-dialog.tsx  canvas-surface.tsx  canvasTypes.ts  context-summary.tsx  frame-navigation.tsx  grid-sidebar.tsx  intensity-sidebar.tsx  navbar.tsx  selection-sidebar.tsx  sidebar.tsx  workspace.tsx
apps/pyama/src/components/ui/: alert-dialog.tsx  button.tsx  select.tsx  spinner.tsx
apps/pyama/src/hooks/: frameContrast.ts  syncQueryToStore.ts  use-grid-canvas-interaction.ts  use-source-frame-load.ts  use-workspace-scan-sync.ts  useGridCanvasInteraction.ts  useSourceFrameLoad.ts  useWorkspaceScanSync.ts
apps/pyama/src/lib/: effects.ts  errors.ts  frameCache.ts  load-frame.ts  selection.ts  store.ts  toast.ts
apps/pyama/src/lib/contracts/: index.ts  types.ts
apps/pyama/src/lib/core/: index.ts  sourceUtils.ts  types.ts  utils.ts
apps/pyama/src/lib/host/: hostApi.ts  hostPorts.ts  index.ts
apps/pyama/src/lib/query/: createQueryClient.ts  hooks.ts  imperativeFetch.ts  index.ts  query-keys.ts  query-options.ts  query-provider.tsx  queryKeys.ts  queryOptions.ts
apps/pyama/src/lib/state/: index.ts
apps/pyama/src/routes/: align.tsx  index.tsx
apps/pyama/src/shared/contracts/: index.ts  types.ts
apps/pyama/src/shared/core/: index.ts  viewerUtils.ts
apps/pyama/src/shared/host/: hostPorts.ts  index.ts
apps/pyama/src/shared/query/: QueryProvider.tsx  hooks.ts  imperativeFetch.ts  index.ts  queryKeys.ts  queryOptions.ts
apps/pyama/src/shared/react/: HostFilePickerDialog.tsx  NavigationControls.tsx  ServerConnectionButton.tsx  contextSummary.tsx  index.ts  sidebar.tsx  toast.ts
apps/pyama/src/shared/state/: storage.ts
apps/pyama/src/shared/ui/: field.tsx  menu.tsx
apps/pyama/src/styles/: app.css  theme.css
apps/pyama/src/viewer/host/: index.ts
apps/pyama/test/: moduleBoundaries.test.ts
apps/pyama/test/lib/: excludedCellIds.test.ts  grid.test.ts  host-api.test.ts  hostApi.test.ts  hostPorts.test.ts  store.test.ts
apps/viewer/: index.html  package.json  vite.config.ts
apps/viewer/scripts/: release.mjs
apps/viewer/src/: App.tsx  main.tsx  routeTree.gen.ts
apps/viewer/src-tauri/: Cargo.toml  tauri.conf.json
apps/viewer/src-tauri/src/: main.rs
apps/viewer/src/routes/: __root.tsx  align.tsx  index.tsx  roi.tsx
docs/agents/: react-naming.md
notebooks/: analyze.ipynb  crop.ipynb
scripts/: install.ps1  install.sh  notebook.ps1  notebook.sh  transfection-analyze.sh  transfection-slide.sh
src/pyama/: __init__.py
src/pyama/core/: __init__.py  bbox.py  mask.py  metrics.py  segment.py  workspace.py
src/pyama/readers/: __init__.py  base.py  czi.py  nd2.py  session.py
src/pyama/services/: auc.py  check_segment.py  crop.py  fit.py  plot_auc.py  plot_fit.py  plot_timeseries.py  segment.py  timeseries.py
src/transfection/core/: __init__.py  constants.py  workspace.py
src/transfection/services/: check_segment.py  plot_auc.py  plot_fit.py  plot_timeseries.py  segment.py  timeseries.py
tests/: test_crop.py
(+29 files in other folders)
