[project]
name = "transfection"
version = "0.1.3"
description = "Microscopy ROI extraction, slide mapping, and timeseries metrics."
requires-python = ">=3.12,<3.13"
dependencies = [
  "imageio",
  "imageio-ffmpeg",
  "matplotlib",
  "numpy",
  "openpyxl>=3.1.5",
  "pandas<3",
  "tifffile",
]

[project.optional-dependencies]
notebook = [
  "ipykernel",
  "jupyter",
]

[build-system]
requires = ["hatchling", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transfection"]
