[project]
name = "pyama"
version = "0.1.3"
description = "Microscopy ROI crop, segmentation, and timeseries analysis."
requires-python = ">=3.12,<3.13"
dependencies = [
  "imageio",
  "imageio-ffmpeg",
  "matplotlib",
  "nd2>=0.10",
  "numpy",
  "openpyxl>=3.1.5",
  "pandas<3",
  "pylibCZIrw>=4.1",
  "tifffile",
]

[project.optional-dependencies]
notebook = [
  "ipykernel",
  "jupyter",
]

[build-system]
requires = ["hatchling", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyama"]
