[package]
name = "pyama"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
czi-rs = { git = "https://github.com/keejkrej/czi-rs" }
nd2-rs = { git = "https://github.com/keejkrej/nd2-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
